# Aserai2D

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
A2DEditor/: A2DEditor.cpp  CMakeLists.txt
A2DEditor/Panels/: AssetManagerPanel.cpp  ConsolePanel.cpp  EntityPropertiesPanel.cpp  PanelManager.cpp  SceneGraphPanel.cpp
A2DEngine/: CMakeLists.txt
A2DEngine/Asset/: AssetManager.cpp  AssetManager.h  SpritesheetAsset.cpp  SpritesheetAsset.h  TextureAsset.cpp
A2DEngine/Core/: Engine.cpp  EventManager.cpp  Logger.cpp  UUID.cpp  Window.cpp
A2DEngine/ECS/: Registry.cpp  Types.cpp
A2DEngine/Editor/: EditorCamera.cpp
A2DEngine/ImGui/: AImGui.cpp
A2DEngine/Input/: InputCodes.h  InputManager.cpp
A2DEngine/Platform/Win32/: FileDialogImplWin32.cpp
A2DEngine/Renderer/: Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Render.cpp  Renderer2D.cpp  Shader.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
A2DEngine/Scene/: Scene.cpp  Scene.h  SceneCamera.cpp
A2DEngine/Systems/: CameraControlSystem.cpp  KeyboardMovementSystem.cpp  MovementSystem.cpp  RenderSystem.cpp
A2DEngine/Utils/: DateTime.cpp  FileIO.cpp
A2DSandbox/: A2DSandbox.cpp  CMakeLists.txt
Scripts/: Gen-WinProjects.bat
